--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo-dev-client": "^3.3.11"
   },
   "private": true
 }
