--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "bootstrap": "^5.3.3",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.10.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/metro-runtime": "^3.1.3",
     "expo-dev-client": "^3.3.11"
   },
   "private": true
