--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.10.0",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-web": "^0.19.10",
