--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@amplitude/analytics-react-native": "^1.4.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "expo": "~50.0.14",
     "firebase": "^10.12.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-native": "0.73.6",
     "react-native-web": "^0.19.10",
     "react-router-dom": "^6.22.3"
