--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.3",
     "expo": "~50.0.14",
     "firebase": "^10.12.0",
+    "rc-slider": "^10.6.2",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-native": "0.73.6",
