--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-native": "0.73.6",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-web": "^0.19.10",
     "react-router-dom": "^6.22.3"
   },
