--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "rc-slider": "^10.6.2",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-native": "0.73.6",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-web": "^0.19.10",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
