--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-react-native": "^1.4.8",
+    "@expo/html-elements": "^0.10.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "expo": "~50.0.14",
