Added Information pages

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "SpecGauge",
+    "name": "SpecGauge | Compare products and predict prices",
     "slug": "SpecGauge",
     "version": "1.0.0",
     "orientation": "portrait",
