--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "specgauge",
-  "version": "4.2.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "spaufsfsage",
+  "private": true,
+  "version": "5.0.0",
+  "type": "module",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build": "react-scripts build"
+    "dev": "vite",
+    "host": "vite --host",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "serve": "serve -s dist"
   },
   "dependencies": {
-    "@amplitude/analytics-react-native": "^1.4.8",
-    "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.3",
-    "expo": "~50.0.14",
-    "firebase": "^10.12.0",
-    "rc-slider": "^10.6.2",
-    "react": "18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-color": "^2.19.3",
-    "react-native": "0.73.6",
-    "react-native-element-dropdown": "^2.12.0",
-    "react-native-web": "^0.19.10",
-    "react-router-dom": "^6.22.3",
-    "seedrandom": "^3.0.5"
+    "@amplitude/analytics-browser": "^2.8.1",
+    "firebase": "^10.12.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/metro-runtime": "^3.1.3",
-    "expo-dev-client": "^3.3.11"
-  },
-  "private": true
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
+  }
 }
