--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.8.1",
+    "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
+    "rc-slider": "^10.6.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
