--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "spaufsfsage",
+  "name": "specgauge",
   "private": true,
-  "version": "5.3.4",
+  "version": "5.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
